--- a/project/servicios/templates/servicios/cliente_list.html
+++ b/project/servicios/templates/servicios/cliente_list.html
@@ -1,12 +1,12 @@
 {% extends 'servicios/base.html' %}
 
 {% block header %}
-Clientes: Listado
+Clientes: Registros
 {% endblock header %}
 
 {% block main %}
         <button>
-        <a href="#"> Crear Registro</a>
+        <a href="{% url 'cliente_create' %}"> Crear Registro</a>
         </button>
     {% for object in object_list %}
         <p>{{ object.apellido | upper }}, {{ object.nombre | upper }} ({{ object.celular }})</p>
