--- a/project/servicios/templates/servicios/pedido_list.html
+++ b/project/servicios/templates/servicios/pedido_list.html
@@ -1,12 +1,12 @@
 {% extends 'servicios/base.html' %}
 
 {% block header %}
-Pedidos: Listado
+Pedidos: Registros
 {% endblock header %}
 
 {% block main %}
         <button>
-        <a href="#"> Crear Registro</a>
+        <a href="{% url 'pedido_create' %}"> Crear Registro</a>
         </button>
     {% for object in object_list %}
         <p>
